test/compile_errors/missing_import.gor
#!/usr/bin/env gor
package main

func main() {
	fmt.Print("test")
}
